--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     width: 100vw;
     height: 100%;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 
